classDiagram

class OrderPlacementService {
    +placeOrder(request) Order
}

class PlaceOrderRequest {
    accountId
    symbol
    side
    quantity
    price
    idempotencyKey
}

class OrderValidator {
    +validateAccount()
    +validateInstrument()
    +validateQuantity()
    +validatePrice()
    +validateFunds()
    +validateHoldings()
}

class OrderExecutor {
    +execute(Order)
}

class IdempotencyChecker {
    <<interface>>
    +reserve(key)
}

class AccountProvider {
    <<interface>>
    +findById(id)
}

class InstrumentProvider {
    <<interface>>
    +findBySymbol(symbol)
}

class PositionProvider {
    <<interface>>
    +find(account,instrument)
}


OrderPlacementService --> PlaceOrderRequest : receives
OrderPlacementService --> OrderValidator : validates
OrderPlacementService --> OrderExecutor : executes
OrderPlacementService --> IdempotencyChecker : checks duplicate

OrderPlacementService --> AccountProvider : loads
OrderPlacementService --> InstrumentProvider : loads
OrderPlacementService --> PositionProvider : loads

OrderPlacementService ..> Order : creates